--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,18 +22,25 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 17
+    - name: Set up JDK 18
       uses: actions/setup-java@v3
       with:
-        java-version: '17'
+        java-version: '18'
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: Upload a Build Artifact
+    - name: Upload SBOM
       uses: actions/upload-artifact@v3.1.0
       with:
         name: SBOM
         path: target/bom.json
+        if-no-files-found: warn
+        retention-days: 7
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.0
+      with:
+        name: JAR
+        path: target/target/shading-example-#{{ version }}.jar
         if-no-files-found: warn
         retention-days: 7
