--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,6 +41,6 @@ jobs:
       uses: actions/upload-artifact@v3.1.0
       with:
         name: JAR
-        path: target/target/shading-example-#{{ version }}.jar
+        path: target/shading-example-#{{ version }}.jar
         if-no-files-found: warn
         retention-days: 7
