--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-         <name>SBOM-example</name>
+  <name>SBOM-example</name>
   <groupId>com.oracle.cloud.adm.examples.sbom</groupId>
   <artifactId>shading-example</artifactId>
   <packaging>jar</packaging>
@@ -22,6 +21,27 @@
       <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib-nodep</artifactId>
+      <version>2.2</version>
+    </dependency>
   </dependencies>
 
   <properties>
@@ -32,33 +52,33 @@
 
   <build>
     <plugins>
-        <plugin>
-            <groupId>org.cyclonedx</groupId>
-            <artifactId>cyclonedx-maven-plugin</artifactId>
-            <version>2.7.1</version>
-            <executions>
-                <execution>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>makeAggregateBom</goal>
-                    </goals>
-                </execution>
-            </executions>
-            <configuration>
-                <projectType>library</projectType>
-                <schemaVersion>1.4</schemaVersion>
-                <includeBomSerialNumber>true</includeBomSerialNumber>
-                <includeCompileScope>true</includeCompileScope>
-                <includeProvidedScope>true</includeProvidedScope>
-                <includeRuntimeScope>true</includeRuntimeScope>
-                <includeSystemScope>true</includeSystemScope>
-                <includeTestScope>false</includeTestScope>
-                <includeLicenseText>false</includeLicenseText>
-                <outputReactorProjects>true</outputReactorProjects>
-                <outputFormat>all</outputFormat>
-                <outputName>bom</outputName>
-            </configuration>
-        </plugin>
+      <plugin>
+        <groupId>org.cyclonedx</groupId>
+        <artifactId>cyclonedx-maven-plugin</artifactId>
+        <version>2.7.1</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>makeAggregateBom</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <projectType>library</projectType>
+          <schemaVersion>1.4</schemaVersion>
+          <includeBomSerialNumber>true</includeBomSerialNumber>
+          <includeCompileScope>true</includeCompileScope>
+          <includeProvidedScope>true</includeProvidedScope>
+          <includeRuntimeScope>true</includeRuntimeScope>
+          <includeSystemScope>true</includeSystemScope>
+          <includeTestScope>false</includeTestScope>
+          <includeLicenseText>false</includeLicenseText>
+          <outputReactorProjects>true</outputReactorProjects>
+          <outputFormat>all</outputFormat>
+          <outputName>bom</outputName>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
